WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133479
[ATK] accessibility/textarea-selected-text-range.html is failing
https://bugs.webkit.org/show_bug.cgi?id=133479
Summary
[ATK] accessibility/textarea-selected-text-range.html is failing
Mario Sanchez Prada
Reported
2014-06-03 08:48:37 PDT
This test is failing after
r169483
because now atk_text_set_caret_offset() is use in AccessibilityUIElement::setSelectedTextRange() when length is zero, proving that the implementation of atk_text_set_caret_offset() is not correct (it should match atk_text_set_selection() for zero-length selections) Patch coming soon...
Attachments
Patch proposal
(2.68 KB, patch)
2014-06-03 09:11 PDT
,
Mario Sanchez Prada
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mario Sanchez Prada
Comment 1
2014-06-03 09:11:11 PDT
Created
attachment 232428
[details]
Patch proposal There was indeed a problem in the implementation of atk_text_set_caret_offset, which was not controlling boundaries properly as atk_text_set_selection does. This patch just implements one function in terms of the other. Please review, thanks
WebKit Commit Bot
Comment 2
2014-06-03 14:38:30 PDT
Comment on
attachment 232428
[details]
Patch proposal Clearing flags on attachment: 232428 Committed
r169572
: <
http://trac.webkit.org/changeset/169572
>
WebKit Commit Bot
Comment 3
2014-06-03 14:38:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug