[ATK] accessibility/textarea-selected-text-range.html is failing https://bugs.webkit.org/show_bug.cgi?id=133479

Reviewed by Chris Fleizach.

Implement atk_text_set_caret_offset() in terms of
atk_text_set_selection() for zero-length selections.

No new tests needed, the following test should just start
passing again now: accessibility/textarea-selected-text-range.html.

* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(webkitAccessibleTextSetCaretOffset): Reimplemented this function
in terms of webkitAccessibleTextSetSelection().


Canonical link: https://commits.webkit.org/151512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169572 268f45cc-cd09-0410-ab3c-d52691b4dbfc